--- a/index.html
+++ b/index.html
@@ -2206,11 +2206,10 @@ text(x, y, labels = row.names(t(final_tbl)), cex=.7)
 <slide class="" id="slide-106" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>資料匯總</h2>
+    <h2>資料整併流程</h2>
   </hgroup>
   <article data-timings="">
-    <p>將介紹 <code>group_by</code>, <code>summarize</code>
-<img src="./resources/figures/R_ETL_Fn2.png"></img></p>
+    <p><img src="./resources/figures/R_ETL_PART4.png"></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -2219,10 +2218,11 @@ text(x, y, labels = row.names(t(final_tbl)), cex=.7)
 <slide class="" id="slide-107" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>資料整併</h2>
+    <h2>資料匯總</h2>
   </hgroup>
   <article data-timings="">
-    <p><img src="./resources/figures/R_ETL_PART4.png"></img></p>
+    <p>將介紹 <code>group_by</code>, <code>summarize</code>
+<img src="./resources/figures/R_ETL_Fn2.png"></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -3539,13 +3539,13 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=106 title='資料匯總'>
+        data-slide=106 title='資料整併流程'>
          106
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=107 title='資料整併'>
+        data-slide=107 title='資料匯總'>
          107
       </a>
     </li>
