--- a/index.html
+++ b/index.html
@@ -2487,15 +2487,7 @@ eg6_2 = summarise(group_by(eg6_1,time),
 <li>inner_join 用來做<code>多對多</code> <strong>水平</strong>結合</li>
 </ol>
 
-<p>前兩個很簡單,後面四個是如同<code>SQL</code>的join處理</p>
-
-<pre><code>left_join(x,y,by=&quot;c1&quot;)
-</code></pre>
-
-<p>對應</p>
-
-<pre><code>select x.*,y.*(扣除c1) from x left join y on x.c1=y.c1;
-</code></pre>
+<p><img src="./resources/figures/R_ETL_Fn3.png" width="100%"></img></p>
 
   </article>
   <!-- Presenter Notes -->
