--- a/index.html
+++ b/index.html
@@ -2884,7 +2884,8 @@ library(RCurl)
 </ul>
 
 <pre><code>DF = read.table(sep=&quot;,&quot;, header=TRUE,            
-file= textConnection(getURL(&quot;https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv&quot;)))
+file= 
+textConnection(getURL(&quot;https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv&quot;)))
 </code></pre>
 
   </article>
